Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ types:
 <li>
 <code>git gs</code> list git-story extensions.</li>
 </ul><h3>
-<a name="misc" class="anchor" href="#misc"><span class="octicon octicon-link"></span></a>misc</h3>
+<a name="misc" class="anchor" href="#misc"><span class="octicon octicon-link"></span></a>Misc</h3>
 
 <ul>
 <li>
