Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ Note that <code>git feature</code> and <code>git finish</code> are flexible. The
 <span class="nv">$ </span>git finish              <span class="c"># Commit changes, updates current and local branch.</span>
 </pre></div>
 
-<p>Output <a href="http://showterm.io/f25fff6593f82dcdab7d1">example</a> (video).</p>
+<p>Output <a href="http://showterm.io/ec6267151db96042b6cf8">example</a> (video).</p>
 
 <h2>
 <a name="documentation" class="anchor" href="#documentation"><span class="octicon octicon-link"></span></a>Documentation</h2>
@@ -269,9 +269,9 @@ types:
 
 <p>For project specific configurations create a file named <code>.gitstoryrc</code> at the project's git root.</p>
 
-<p>See full example with comments in <a href="https://github.com/buren/git-story/blob/master/docs/gitstoryrc-example">docs/gitstoryrc-example</a>.</p>
+<p>See full example with comments in <a href="https://github.com/buren/git-story/blob/master/docs/gitstoryrc-example">docs/gitstoryrc-example</a>. </p>
 
-<p>Available options and their default value:</p>
+<p>Available options and their <a href="https://github.com/buren/git-story/blob/master/config">default</a> value:</p>
 
 <pre><code>GS_DEFAULT_REMOTE='origin'          # Default remote for git story
 GS_GIT_STORY_BRANCH='master'        # Target branch for 'feature' &amp; 'finish'
@@ -292,8 +292,6 @@ GS_NEXT_VERSION_BRANCH=''           # Integration branch for next
 GS_EDGE_BRANCH=''                   # Integration branch for edge
 GS_GIT_STORY_EXT_BRANCH='master'    # Target branch for git-story extension
 </code></pre>
-
-<p>Default <a href="https://github.com/buren/git-story/blob/master/config">config</a>.</p>
 
 <h2>
 <a name="notes" class="anchor" href="#notes"><span class="octicon octicon-link"></span></a>Notes</h2>
